--- a/seller-panel and website/web-cart.html
+++ b/seller-panel and website/web-cart.html
@@ -189,8 +189,8 @@
                             Dignissimos voluptatibus molestias modi eligendi temporibus! Unde officia sit sed, autem modi in aperiam laboriosam accusamus quos neque. Illo adipisci placeat necessitatibus pariatur sint reiciendis. Possimus vel dolor eligendi quas.</div>
                         </div>
                         <div class="price">
-                            <div class="discounted-price"><del>$55.00</del></div>
-                            <div class="original-price">$32.00</div>
+                            <div class="discounted-price"><del>Rs55.00</del></div>
+                            <div class="original-price">Rs32.00</div>
                         </div>
                     </div>
                     <div class="desc-buttons">
@@ -216,8 +216,8 @@
                             Dignissimos voluptatibus molestias modi eligendi temporibus! Unde officia sit sed, autem modi in aperiam laboriosam accusamus quos neque. Illo adipisci placeat necessitatibus pariatur sint reiciendis. Possimus vel dolor eligendi quas.</div>
                         </div>
                         <div class="price">
-                            <div class="discounted-price"><del>$55.00</del></div>
-                            <div class="original-price">$32.00</div>
+                            <div class="discounted-price"><del>Rs55.00</del></div>
+                            <div class="original-price">Rs32.00</div>
                         </div>
                     </div>
                     <div class="desc-buttons">
@@ -243,8 +243,8 @@
                             Dignissimos voluptatibus molestias modi eligendi temporibus! Unde officia sit sed, autem modi in aperiam laboriosam accusamus quos neque. Illo adipisci placeat necessitatibus pariatur sint reiciendis. Possimus vel dolor eligendi quas.</div>
                         </div>
                         <div class="price">
-                            <div class="discounted-price"><del>$55.00</del></div>
-                            <div class="original-price">$32.00</div>
+                            <div class="discounted-price"><del>Rs55.00</del></div>
+                            <div class="original-price">Rs32.00</div>
                         </div>
                     </div>
                     <div class="desc-buttons">
@@ -302,7 +302,7 @@
                     <div class="card-body">
                         <div class="item-price">
                             <div class="item">Cart Subtotal</div>
-                            <div class="price">$70.90</div>
+                            <div class="price">Rs70.90</div>
                         </div>
                         <div class="item-price">
                             <div class="item">Design by Flutertop</div>
@@ -310,7 +310,7 @@
                         </div>
                         <div class="item-price">
                             <div class="item">Discount</div>
-                            <div class="price">-$4.00</div>
+                            <div class="price">-Rs4.00</div>
                         </div>
                         <div class="item-price">
                             <div class="item">Coupon Discount</div>
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                     <div class="card-foot">
-                        <div class="card-subtitle">Cart Total <strong>$67.50</strong></div>
+                        <div class="card-subtitle">Cart Total <strong>Rs67.50</strong></div>
                         <a href="./web-checkout.html">
                           <button class="btn btn-light btn-pill btn-block">
                             Proceed to Checkout
@@ -352,9 +352,9 @@
                     </div>
                     <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                     <div class="prices">
-                      <div class="card-subtitle original-price">$295.00</div>
+                      <div class="card-subtitle original-price">Rs295.00</div>
                     </div>
-                    <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                   </div>
                 </div>
               </a>
@@ -375,9 +375,9 @@
                     </div>
                     <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                     <div class="prices">
-                      <div class="card-subtitle original-price">$295.00</div>
+                      <div class="card-subtitle original-price">Rs295.00</div>
                     </div>
-                    <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                   </div>
                 </div>
               </a>
@@ -398,9 +398,9 @@
                     </div>
                     <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                     <div class="prices">
-                      <div class="card-subtitle original-price">$295.00</div>
+                      <div class="card-subtitle original-price">Rs295.00</div>
                     </div>
-                    <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                   </div>
                 </div>
               </a>
@@ -421,9 +421,9 @@
                     </div>
                     <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                     <div class="prices">
-                      <div class="card-subtitle original-price">$295.00</div>
+                      <div class="card-subtitle original-price">Rs295.00</div>
                     </div>
-                    <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                   </div>
                 </div>
               </a>
@@ -444,9 +444,9 @@
                     </div>
                     <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                     <div class="prices">
-                      <div class="card-subtitle original-price">$295.00</div>
+                      <div class="card-subtitle original-price">Rs295.00</div>
                     </div>
-                    <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                    <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                   </div>
                 </div>
               </a>
@@ -467,9 +467,9 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">$295.00</div>
+                    <div class="card-subtitle original-price">Rs295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                 </div>
               </div>
             </a>
@@ -490,9 +490,9 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">$295.00</div>
+                    <div class="card-subtitle original-price">Rs295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                 </div>
               </div>
             </a>
@@ -513,9 +513,9 @@
                   </div>
                   <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                   <div class="prices">
-                    <div class="card-subtitle original-price">$295.00</div>
+                    <div class="card-subtitle original-price">Rs295.00</div>
                   </div>
-                  <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                  <div class="card-subtitle discounted-price"><del>Rs295.00</del>-66%</div>
                 </div>
               </div>
             </a>
