--- a/seller-panel and website/account-health.html
+++ b/seller-panel and website/account-health.html
@@ -590,6 +590,21 @@
             <div class="page-content">
                 <div class="container-xxl">
                     <h3>Account Health</h3>
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 class="text-primary">Excellent</h2>
+                            <p class="text-secondary">Your store is doing well. Review violations (if any) and continue to keep up with the good work!</p>
+                            <h4>Non-Compliance Points (NCP) : <span class="text-secondary">0</span></h4>
+                            <h3 class="text-success">Rs 300,0000</h3>
+                        </div>
+                        <div class="card-body">
+                            <div class="progress mb-3">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">40%</div>
+                                <div class="progress-bar text-dark progress-bar-striped progress-bar-animated bg-light" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">20%</div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-8">
                            <div class="card">
