--- a/seller-panel and website/my-income.html
+++ b/seller-panel and website/my-income.html
@@ -17,7 +17,10 @@
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/favicon.ico">
 
-
+    <link href="assets/libs/mobius1-selectr/selectr.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/huebee/huebee.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/vanillajs-datepicker/css/datepicker.min.css" rel="stylesheet" type="text/css" />
+    
 
     <!-- App css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -640,12 +643,32 @@
                                             <!--end card-body-->
                                         </div>
                                         <h3>Income Overview</h3>
-                                        <div class="col-4">
-                                            <div class="card" style="border-radius:10px;background-color: #e8f1ff;padding: 15px;">
-                                                <h4 class="title mb-2">To Release</h4>
-                                                <h1 class="card-subtitle mb-2">PKR 0.00</h1>
-                                                <p class="card-text">To be released on 14 Oct 2024
-                                                </p>
+                                        <div class="row">
+                                            <div class="col-4">
+                                                <div class="card" style="border-radius:10px;background-color: #e8f1ff;padding: 15px;">
+                                                    <h4 class="title mb-2">To Release</h4>
+                                                    <h1 class="card-subtitle mb-2">PKR 0.00</h1>
+                                                    <p class="card-text">To be released on 14 Oct 2024
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-lg-8">
+                                                <div class="card">
+                                                    <div class="card-header">
+                                                        <div class="row align-items-center">
+                                                            <div class="col">
+                                                                <h4 class="card-title">Check Sales</h4>
+                                                            </div>
+                                                        </div>
+                                                        <!--end row-->
+                                                    </div>
+                                                    <!--end card-header-->
+                                                    <div class="card-body pt-0">
+                                                        <div id="audience_overview" class="apex-charts"></div>
+                                                    </div>
+                                                    <!--end card-body-->
+                                                </div>
+                                                <!--end card-->
                                             </div>
                                         </div>
                                         <div class="col-md-12 col-lg-12">
@@ -1206,6 +1229,18 @@
 
     <!-- Javascript  -->
     <!-- vendor js -->
+    <script src="assets/libs/apexcharts/apexcharts.min.js"></script>
+    <script src="assets/data/stock-prices.js"></script>
+    <script src="assets/libs/jsvectormap/js/jsvectormap.min.js"></script>
+    <script src="assets/libs/jsvectormap/maps/world.js"></script>
+    <script src="assets/js/pages/index.init.js"></script>
+
+    <script src="assets/js/pages/ecommerce-index.init.js"></script>
+
+
+
+
+
 
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
