--- a/seller-panel and website/test.html
+++ b/seller-panel and website/test.html
@@ -3,115 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baby Hand Pull Animation</title>
+  <title>Hover Effect</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #b3e5fc;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
-    }
-
-    /* Container with hidden section */
-    .container {
-      position: relative;
-      width: 100%;
-      max-width: 800px;
-      height: 600px;
-      background-color: #ffffff;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-      overflow: hidden;
-      border-radius: 10px;
-    }
-
-    /* Hidden content */
-    .content {
+   /* Hidden div styling */
+   .hover-content {
+      display: none;
       position: absolute;
-      top: -100%;
-      width: 100%;
-      height: 100%;
-      background-color: #f1f8e9;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      transition: top 1s ease, transform 0.4s ease;
-      border-radius: 0 0 20px 20px;
-      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+      top: 220px;
+      left: 34%; /* Right side of the link */
+      margin-left: 10px;
+      width: 400px;
+      padding: 10px;
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      z-index: 10;
+    }
+    .hover-link:hover +  .hover-content{
+            display: block;
     }
 
-    /* Paper effect */
-    .content.grabbed {
-      transform: rotateX(15deg) scaleY(0.95);
-      transition: transform 0.3s;
-    }
+    /* Show div on hover */
 
-    /* Baby hand SVG */
-    .baby-hand {
-      position: absolute;
-      top: -50px;
-      left: 50%;
-      transform: translate(-50%, 0);
-      width: 80px;
-      height: 80px;
-      transition: top 0.8s ease;
-      z-index: 1;
+    .hover-content img {
+      max-width: 100%;
+      margin-top: 10px;
+      border-radius: 5px;
     }
-
-    .baby-hand.move-down {
-      top: 30px;
+    .hover-text{
+        padding: 10px;
+    background-color: #ececec;
+    border-radius: 10px;
     }
-
-    .content.move-down {
-      top: 0;
-    }
-
   </style>
 </head>
 <body>
 
-<div class="container">
-  <!-- SVG Baby Hand -->
-  <svg class="baby-hand" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-    <path fill="#ff8a80" d="M12 2c-.77 0-1.47.3-2 .77C9.47 2.3 8.77 2 8 2 6.34 2 5 3.34 5 5v5.7c-.12-.03-.25-.05-.38-.05-1.25 0-2.24 1-2.24 2.24V20c0 1.1.9 2 2 2h1.68c1.06 0 2.09-.42 2.83-1.17l.98-.99 1.01.99c.73.75 1.75 1.17 2.8 1.17h1.68c1.1 0 2-.9 2-2v-7.76c0-1.24-1-2.24-2.24-2.24-.13 0-.26.02-.38.05V5c0-1.66-1.34-3-3-3z"/>
-  </svg>
-
-  <!-- Content Section -->
-  <section class="content" id="content">
-    <h1>Revealed Content</h1>
-    <p>This section appears as if it's being pulled down by a baby hand.</p>
-  </section>
+<div class="hover-target">
+  Hover over me
+  <div class="hover-content">
+    <p>Here’s your statement!</p>
+    <img src="https://via.placeholder.com/150" alt="Placeholder Image">
+  </div>
 </div>
-
-<script>
-  window.onload = () => {
-    const babyHand = document.querySelector('.baby-hand');
-    const content = document.querySelector('.content');
-
-    // Start the animation after a short delay
-    setTimeout(() => {
-      // Move the hand down and grab the section
-      babyHand.classList.add('move-down');
-      content.classList.add('grabbed');
-
-      // After a short delay, pull the content down
-      setTimeout(() => {
-        content.classList.add('move-down');
-        content.classList.remove('grabbed'); // Remove grab effect after pulling down
-      }, 800);
-    }, 500); // Delay to simulate grabbing effect
-  };
-</script>
 
 </body>
 </html>
