--- a/seller-panel and website/web-Product-details.html
+++ b/seller-panel and website/web-Product-details.html
@@ -9,6 +9,125 @@
     <link rel="stylesheet" href="./web-assets/assets/css/kit.css">
     <link rel="stylesheet" href="./web-assets/assets/css/style.css">
 <style>
+  /* model */
+   /* Modal Overlay */
+   .modal-overlay-address {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 1 !important;
+    }
+
+    .modal-overlay-address.active {
+      display: flex;
+    }
+
+    /* Modal Container */
+    .modal-address {
+      background: white;
+      border-radius: 8px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* Modal Header */
+    .modal-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px;
+      background-color: #f1f1f1;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .modal-header h3 {
+      margin: 0;
+      font-size: 18px;
+    }
+
+    .modal-header .close-modal {
+      background: none;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    /* Modal Body */
+    .modal-address .modal-body {
+      padding: 20px;
+      height: 400px;
+      overflow-y: scroll;
+    }
+
+    /* Modal Footer */
+    .modal-footer {
+      display: flex;
+      justify-content: flex-end;
+      padding: 15px;
+      background-color: #f1f1f1;
+      border-top: 1px solid #ddd;
+    }
+
+    .modal-footer button {
+      margin-left: 10px;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .modal-footer .close-btn {
+      background-color: #ddd;
+      color: #333;
+    }
+
+    .modal-footer .send-btn {
+      background-color: #007bff;
+      color: #fff;
+    }
+
+    .btn-close-modal {
+      border: none;
+      outline: none;
+      font-size: 25px;
+      font-weight: 500;
+    }
+
+    @media (max-width: 640px) {
+      .modal-overlay-address .modal-address {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        max-width: 100%;
+        width: 100%;
+      }
+
+      .modal-overlay-address .modal-address .modal-body {
+        height: 80%;
+      }
+
+      .modal-overlay-address .modal-address .modal-footer {
+        position: absolute;
+        bottom: 0px;
+        background: white;
+        border: none;
+        z-index: 99;
+        width: 100%;
+        right: 0px;
+      }
+    }
 /* Loader styles */
 .loader {
         display: none; /* Initially hidden */
@@ -208,6 +327,42 @@
 </nav>
 <!-- /header -->
     <!-- content -->
+    <div class="modal-overlay-address" id="modal-1">
+      <div class="modal-address">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h3>Report Product</h3>
+          <button class="close-modal">&times;</button>
+        </div>
+  
+        <!-- Modal Body -->
+        <div class="modal-body">
+          <div class="form-field">
+            <label class="field-label">Full Name :</label>
+            <div class="field">
+              <input type="text" class="field-text" placeholder="Full Name" />
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="field-label">Email :</label>
+            <div class="field">
+              <input type="email" class="field-text" placeholder="Please enter your e-mail" />
+            </div>
+          </div>
+          <div class="form-field">
+            <label class="field-label">Reason :</label>
+            <div class="field">
+              <textarea type="date" class="field-text" rows="7" cols="50" ></textarea>
+            </div>
+          </div>
+        </div>
+        <!-- Modal Footer -->
+        <div class="modal-footer">
+          <button class="close-btn close-modal">Close</button>
+          <button class="send-btn">Send</button>
+        </div>
+      </div>
+    </div>
 <div class="content-area">
     <div class="breadcrumbs-container">
         <h4>Product Detail</h4>
@@ -218,6 +373,7 @@
             <li class="breadcrumb-item active">T-shirts akjshajschashcuai suidh uui dhasiudh  h dish   </li>
           </ol>
     </div>
+   
     <div class="container product-detail-cards">
         <div class="product-detail">
             <div class="product-img-and-info">
@@ -270,7 +426,7 @@
                         <h6>DETAILS</h6>
                         <ul>
                             <li><i class="bx bxs-map"></i>Send from <strong>New York, USA</strong></li>
-                            <li><i class='bx bxs-truck'></i>Estimated Shipping <strong>$3.99</strong></li>
+                            <li><i class='bx bxs-truck'></i>Estimated Shipping <strong>Rs 3.99</strong></li>
                             <li><i class='bx bxs-check-shield'></i><strong>100 %</strong>Original Product</li>
                         </ul>
                     </div>
@@ -295,8 +451,8 @@
                         <div class="sold">1,919 Sold</div>
                     </div>
                     <div class="product-price">
-                        <h2 class="original-price">$890,00</h2>
-                        <div class="discounted-price"><del>$1290.00</del>-77%</div>
+                        <h2 class="original-price">Rs 890,00</h2>
+                        <div class="discounted-price"><del>Rs 1290.00</del>-77%</div>
                     </div>
                     <div class="select-colors">
                         <h6>SELECTED COLOR</h6>
@@ -338,7 +494,7 @@
                     </div>
                     <button class="btn btn-block btn-icon btn-wishlist"><i class="bx bx-heart icon-pre"></i> Save to Wishlist </button>
                     <button class="btn btn-block btn-icon btn-cart"><i class="bx bx-cart icon-pre"></i> Add to Cart </button>
-                    <button class="btn btn-block btn-icon btn-danger"><i class="bx bx-notepad icon-pre"></i> Report Product </button>
+                    <button class="btn btn-block btn-icon btn-danger modal-trigger" data-target="modal-1" style="cursor: pointer;"><i class="bx bx-notepad icon-pre"></i> Report Product </button>
                   </div>
                 <div class="order-detail">
                     <div class="heading-info">
@@ -350,7 +506,7 @@
                         <div class="text">
                             Sindh, Karachi - Karachi G Block-G Block 15
                         </div>
-                        <button class="btn btn-change-address btn-sm">CHANGE</button>
+                        <button class="btn btn-change-address btn-sm"><a href="./web-checkout.html">CHANGE</a></button>
                     </div>
                     <hr>
                     <div class="desc-info">
@@ -358,7 +514,7 @@
                         <div class="text">
                             Standard Delivery<br><span>Guaranteed by 6-11 Oct</span>
                         </div>
-                        <div class="delivery-price">$3.99</div>
+                        <div class="delivery-price">Rs 3.99</div>
                     </div>
                     <div class="desc-info">
                         <i class='bx bx-money-withdraw'></i>
@@ -562,9 +718,9 @@
                         </div>
                         <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                         <div class="prices">
-                          <div class="card-subtitle original-price">$295.00</div>
+                          <div class="card-subtitle original-price">Rs 295.00</div>
                         </div>
-                        <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                        <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                       </div>
                     </div>
                   </a>
@@ -585,9 +741,9 @@
                         </div>
                         <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                         <div class="prices">
-                          <div class="card-subtitle original-price">$295.00</div>
+                          <div class="card-subtitle original-price">Rs 295.00</div>
                         </div>
-                        <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                        <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                       </div>
                     </div>
                   </a>
@@ -608,9 +764,9 @@
                         </div>
                         <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                         <div class="prices">
-                          <div class="card-subtitle original-price">$295.00</div>
+                          <div class="card-subtitle original-price">Rs 295.00</div>
                         </div>
-                        <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                        <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                       </div>
                     </div>
                   </a>
@@ -631,9 +787,9 @@
                         </div>
                         <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                         <div class="prices">
-                          <div class="card-subtitle original-price">$295.00</div>
+                          <div class="card-subtitle original-price">Rs 295.00</div>
                         </div>
-                        <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                        <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                       </div>
                     </div>
                   </a>
@@ -654,9 +810,9 @@
                         </div>
                         <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                         <div class="prices">
-                          <div class="card-subtitle original-price">$295.00</div>
+                          <div class="card-subtitle original-price">Rs 295.00</div>
                         </div>
-                        <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                        <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                       </div>
                     </div>
                   </a>
@@ -677,9 +833,9 @@
                       </div>
                       <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                       <div class="prices">
-                        <div class="card-subtitle original-price">$295.00</div>
+                        <div class="card-subtitle original-price">Rs 295.00</div>
                       </div>
-                      <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                      <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                     </div>
                   </div>
                 </a>
@@ -700,9 +856,9 @@
                       </div>
                       <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                       <div class="prices">
-                        <div class="card-subtitle original-price">$295.00</div>
+                        <div class="card-subtitle original-price">Rs 295.00</div>
                       </div>
-                      <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                      <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                     </div>
                   </div>
                 </a>
@@ -723,9 +879,9 @@
                       </div>
                       <div class="card-desc text-ellipsis text-ellipsis-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum aliquam nisi iste itaque voluptate amet ea iusto quisquam ipsum ut, non ad similique ducimus veritatis distinctio nobis, rerum, aut et!</div>
                       <div class="prices">
-                        <div class="card-subtitle original-price">$295.00</div>
+                        <div class="card-subtitle original-price">Rs 295.00</div>
                       </div>
-                      <div class="card-subtitle discounted-price"><del>$295.00</del>-66%</div>
+                      <div class="card-subtitle discounted-price"><del>Rs 295.00</del>-66%</div>
                     </div>
                   </div>
                 </a>
@@ -1166,5 +1322,32 @@ document.addEventListener('DOMContentLoaded', initializeReviews);
     // Set "New" tab content visible on page load
     document.getElementById("new").style.display = "block";
   </script>
+  <!-- report-model -->
+<script>
+  // Select elements
+const modalOverlay = document.querySelector('.modal-overlay-address');
+const openModalBtn = document.querySelector('.modal-trigger');
+const closeModalBtns = document.querySelectorAll('.close-modal');
+
+// Open modal when the trigger is clicked
+openModalBtn.addEventListener('click', () => {
+  const target = openModalBtn.getAttribute('data-target');
+  document.getElementById(target).classList.add('active');
+});
+
+// Close modal when any close button is clicked
+closeModalBtns.forEach(btn => {
+  btn.addEventListener('click', () => {
+    modalOverlay.classList.remove('active');
+  });
+});
+
+// Close modal when clicking outside the modal content
+modalOverlay.addEventListener('click', (e) => {
+  if (e.target === modalOverlay) {
+    modalOverlay.classList.remove('active');
+  }
+});
+</script>
 </body>
 </html>
