--- a/seller-panel and website/test.html
+++ b/seller-panel and website/test.html
@@ -5,23 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+
+</style>
 <body>
-    <!-- Multiple editors with the same class -->
-<div class="editor"></div>
-<div class="editor"></div>
-<div class="editor"></div>
-
-<!-- Quill JS library (Add Quill library in your HTML head or before script tag) -->
-<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-
-<script>
-    // Get all elements with the class 'editor'
-    document.querySelectorAll('.editor').forEach((editorElement, index) => {
-        // Apply Quill to each editor element
-        new Quill(editorElement, { theme: "snow" });
-    });
-</script>
-
+    
 </body>
 </html>
