1 page rehta hy bs

--- a/seller-panel and website/ecommerce-refunds.html
+++ b/seller-panel and website/ecommerce-refunds.html
@@ -73,11 +73,11 @@
                             <label class="col-md-3 mb-2 control-label">Content</label>
                             <div class="col-md-9">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="content" value="option1">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="content" value="option1">
                                     <label class="form-check-label" for="content">With Content</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="image-video" value="option2">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions1" id="image-video" value="option2">
                                     <label class="form-check-label" for="image-video">Width Image or Video</label>
                                 </div>
                             </div>
@@ -86,23 +86,23 @@
                             <label class="col-md-3 mb-2 control-label">Overall Rating</label>
                             <div class="col-md-12">
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="1star" value="option1">
+                                    <input class="form-check-input" type="radio" name="ratings" id="1star" value="option1">
                                     <label class="form-check-label" for="1star">1 star</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="2star" value="option1">
+                                    <input class="form-check-input" type="radio" name="ratings" id="2star" value="option1">
                                     <label class="form-check-label" for="2star">2 star</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="3star" value="option1">
+                                    <input class="form-check-input" type="radio" name="ratings" id="3star" value="option1">
                                     <label class="form-check-label" for="3star">3 star</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="4star" value="option1">
+                                    <input class="form-check-input" type="radio" name="ratings" id="4star" value="option1">
                                     <label class="form-check-label" for="4star">4 star</label>
                                 </div>
                                 <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="5star" value="option2">
+                                    <input class="form-check-input" type="radio" name="ratings" id="5star" value="option2">
                                     <label class="form-check-label" for="5star">5 star</label>
                                 </div>
                             </div>
