--- a/seller-panel and website/index.html
+++ b/seller-panel and website/index.html
@@ -372,7 +372,7 @@
                                         <a class="nav-link" href="./media-center.html">Media Center</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./ecommerce-refunds.html">Fulfilment by 
+                                        <a class="nav-link" href="./auth-404.html">Fulfilment by 
                                             Name
                                         </a>
                                     </li>
@@ -396,7 +396,7 @@
                                         <a class="nav-link" href="./ecommerce-orders.html">Orders</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="./ecommerce-order-details.html">Order Details</a>
+                                        <a class="nav-link" href="./ecommerce-return-order.html">Return Order</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
                                         <a class="nav-link" href="./ecommerce-refunds.html">Refunds</a>
@@ -471,7 +471,7 @@
                             <div class="collapse " id="sidebarGrow">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-orders.html">Name University</a>
+                                        <a class="nav-link" href="./auth-404.html">Name University</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
                                         <a class="nav-link" href="./seller-challenges.html">New Seller Challenge</a>
@@ -491,10 +491,10 @@
                             <div class="collapse " id="sidebarstore">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-orders.html">Store Decoration</a>
+                                        <a class="nav-link" href="./auth-404.html">Store Decoration</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-order-details.html">Store Settings</a>
+                                        <a class="nav-link" href="./auth-404.html">Store Settings</a>
                                     </li><!--end nav-item-->
                                     <!--end nav-item-->
                                 </ul><!--end nav-->
@@ -887,70 +887,70 @@
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <td>#3269</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Ammar Shahid</td>
                                                 <td> 52.80%</td>
                                                 <td>566<small class="text-muted">(92%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#3989</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>John Doe</td>
                                                 <td> 47.54%</td>
                                                 <td>498<small class="text-muted">(81%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#2459</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Jane Smith</td>
                                                 <td> 41.12%</td>
                                                 <td>455<small class="text-muted">(74%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#3239</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Alex Johnson</td>
                                                 <td> 36.82%</td>
                                                 <td>361<small class="text-muted">(61%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#3379</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Sarah Brown</td>
                                                 <td> 52.80%</td>
                                                 <td>566<small class="text-muted">(92%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#3199</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Michael Davis</td>
                                                 <td> 52.80%</td>
                                                 <td>566<small class="text-muted">(92%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#2679</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Emily Wilson</td>
                                                 <td> 47.54%</td>
                                                 <td>498<small class="text-muted">(81%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#2129</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Chris Tylor</td>
                                                 <td> 41.12%</td>
                                                 <td>455<small class="text-muted">(74%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#2939</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>David Anderson</td>
                                                 <td> 36.82%</td>
                                                 <td>361<small class="text-muted">(61%)</small></td>
                                             </tr>
                                             <!--end tr-->
                                             <tr>
-                                                <td>#3209</td>
+                                                <td><a href="./ecommerce-order-details.html">#32451</a></td>
                                                 <td>Olivia White</td>
                                                 <td> 52.80%</td>
                                                 <td>566<small class="text-muted">(92%)</small></td>
