--- a/seller-panel and website/auth-404.html
+++ b/seller-panel and website/auth-404.html
@@ -39,15 +39,15 @@
                                         <a href="index.html" class="logo logo-admin">
                                             <img src="assets/images/logo-sm.png" height="50" alt="logo" class="auth-logo">
                                         </a>
-                                        <h4 class="mt-3 mb-1 fw-semibold text-white fs-18">Oops! Sorry page does not found</h4>   
+                                        <h4 class="mt-3 mb-1 fw-semibold text-white fs-18">Oops! Sorry page is Under Construction</h4>   
                                         <p class="text-muted fw-medium mb-0">Back to dashboard of Rizz</p>  
                                     </div>
                                 </div>
                                 <div class="card-body pt-0">                                    
                                     <div class="ex-page-content text-center">
-                                        <img src="assets/images/extra/error.svg" alt="0" class="" height="170">
-                                        <h1 class="my-2">404!</h1>  
-                                        <h5 class="fs-16 text-muted mb-3">Somthing went wrong</h5>                                    
+                                        <img src="assets/images/extra/200-error-custom.svg" alt="0" class="" height="170">
+                                        <h1 class="my-2">200!</h1>  
+                                        <h5 class="fs-16 text-muted mb-3">Coming Soon!</h5>                                    
                                     </div>   
                                     <a class="btn btn-primary w-100" href="index.html">Back to Dashboard <i class="fas fa-redo ms-1"></i></a> 
                                 </div><!--end card-body-->
