--- a/seller-panel and website/ecommerce-refunds.html
+++ b/seller-panel and website/ecommerce-refunds.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mb-3">
                             <div class="col-sm-12">
-                                <label for="" class="form-label">Product Quality</label>
+                                <label for="" class="form-label">Shipping Service</label>
                                 <select class="form-select" aria-label="Default select example">
                                     <option selected="">SELECT</option>
                                     <option value="1">All</option>
@@ -137,7 +137,7 @@
                         </div>
                         <div class="mb-3">
                             <div class="col-sm-12">
-                                <label for="" class="form-label">Product Quality</label>
+                                <label for="" class="form-label">Seller Service</label>
                                 <select class="form-select" aria-label="Default select example">
                                     <option selected="">SELECT</option>
                                     <option value="1">All</option>
