--- a/seller-panel and website/web-index.html
+++ b/seller-panel and website/web-index.html
@@ -10,10 +10,6 @@
     <link rel="stylesheet" href="./web-assets/assets/css/style.css">
 <style>
 
- /* Container for the button */
-/* Container for the button */
-/* Container for the button */
-/* Container for the button */
 .message-btn {
     position: fixed;
     bottom: 20px;
@@ -266,7 +262,7 @@
   <div class="container flash-sale">
     <div class="headings d-flex">
       <h3>Flash Sale</h3>
-      <a href=""><button class="btn btn-see-products">See All Products</button></a>
+      <a href="./web-products.html"><button class="btn btn-see-products">See All Products</button></a>
     </div>
     <hr>
     <div class="swiper mySwiper sale-slider">
@@ -465,7 +461,7 @@
   <div class="container product-categories">
     <div class="headings d-flex">
       <h3>Top Categories</h3>
-      <a href="">See More</a>
+      <a href="./web-products.html">See More</a>
     </div>
     <hr>
     <div class="categories-cards">
@@ -516,7 +512,7 @@
   <div class="container products product-container">
     <h3 class="headings">Just For You</h3>
     <hr>
-    <div class="for-you-products product-cards" >
+    <div class="for-you-products product-cards">
       <a href="./web-Product-details.html">
         <div class="card Product-card">
           <div class="card-head">
@@ -1097,15 +1093,6 @@
   <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
   <span class="message-text">Message</span>
 </div>
-<!-- <div class="phone-call cbh-phone cbh-green cbh-show cbh-static" id="clbh_phone_div">
-<a id="WhatsApp-button" href="https://wa.me/5521980619913" target="_blank" class="phoneJs" title="WhatsApp 360imagem" ><div class="cbh-ph-circle"></div>
-  <div class="cbh-ph-circle-fill"></div>
-  <div class="cbh-ph-img-circle1">
-    <i class='bx bxs-chat' style='color:#ffffff'></i>
-    Messages
-  </div>
-</a>
-</div> -->
 <!-- /content -->
  <!-- footer -->
 <footer>
