--- a/seller-panel and website/web-footer.html
+++ b/seller-panel and website/web-footer.html
@@ -41,8 +41,7 @@
                 <ul>
                     <a href="./web-terms.html"><li>Terms & Condition</li></a>
                     <a href="./web-privacy-policy.html"><li>Privacy Policy</li></a>
-                    <a href="./web-refund&exchange.html"><li>Exchange & Return</li></a>
-                    <a href="./web-refund-policy.html"><li>Refund Policy</li></a>
+                    <a href="./web-refund&exchange.html"><li>Exchange & Refund</li></a>
                     <a href="./web-shipment-policy.html"><li>Shipment Policy</li></a>
                 </ul>
             </div>
