--- a/seller-panel and website/web-cart.html
+++ b/seller-panel and website/web-cart.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./web-assets/assets/css/kit.css">
     <link rel="stylesheet" href="./web-assets/assets/css/style.css">
-<style>
 
-</style>
 </head>
 <body>
     <!-- header -->
    <div id="header"></div>
   <!-- /header -->
+   <!-- preloader -->
+    <div id="preloader"></div>
+   <!-- /preloader -->
     <!-- content -->
    
 <div class="content-area">
@@ -191,7 +192,7 @@
     <div class="swiper mySwiper sale-slider">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="./web-Product-details.html">
+              <a class="card-product" href="./web-Product-details.html">
                 <div class="card Product-card">
                   <div class="card-head">
                     <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -214,7 +215,7 @@
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./web-Product-details.html">
+              <a class="card-product" href="./web-Product-details.html">
                 <div class="card Product-card">
                   <div class="card-head">
                     <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -237,7 +238,7 @@
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./web-Product-details.html">
+              <a class="card-product" href="./web-Product-details.html">
                 <div class="card Product-card">
                   <div class="card-head">
                     <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -260,7 +261,7 @@
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./web-Product-details.html">
+              <a class="card-product" href="./web-Product-details.html">
                 <div class="card Product-card">
                   <div class="card-head">
                     <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -283,7 +284,7 @@
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="./web-Product-details.html">
+              <a class="card-product" href="./web-Product-details.html">
                 <div class="card Product-card">
                   <div class="card-head">
                     <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -306,7 +307,7 @@
               </a>
           </div>
           <div class="swiper-slide">
-            <a href="./web-Product-details.html">
+            <a class="card-product" href="./web-Product-details.html">
               <div class="card Product-card">
                 <div class="card-head">
                   <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -329,7 +330,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="./web-Product-details.html">
+            <a class="card-product" href="./web-Product-details.html">
               <div class="card Product-card">
                 <div class="card-head">
                   <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -352,7 +353,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a href="./web-Product-details.html">
+            <a class="card-product" href="./web-Product-details.html">
               <div class="card Product-card">
                 <div class="card-head">
                   <img src="./web-assets/assets/images/t-shirt_product.jpg" class="card-image">
@@ -388,64 +389,7 @@
 </div>
 <!-- /content -->
  <!-- footer -->
- <footer>
-  <div class="foot-logo">
-      <img src="./web-assets/assets/images/demo-logo.png">
-  </div>
-  <div class="info d-flex">
-      <div class="links">
-          <h6 class="text-c-white fw-700">Quick Links</h6>
-          <ul>
-              <a href="./web-index.html"><li>Home</li></a>
-              <a href="./web-about-us.html"><li>About Us</li></a>
-              <a href=""><li>Contact Us</li></a>
-              <a href=""><li>Story</li></a>
-              <a href=""><li>Blogs</li></a>
-          </ul>
-      </div>
-      <div class="links">
-          <h6 class="text-c-white fw-700">Getting Started</h6>
-          <ul>
-              <a href=""><li>Home</li></a>
-              <a href=""><li>About Us</li></a>
-              <a href=""><li>Contact Us</li></a>
-              <a href=""><li>Story</li></a>
-              <a href=""><li>Blogs</li></a>
-          </ul>
-      </div>
-      <div class="links">
-          <h6 class="text-c-white fw-700">Featured</h6>
-          <ul>
-              <a href="./web-terms.html"><li>Terms & Condition</li></a>
-              <a href="./web-privacy-policy.html"><li>Privacy Policy</li></a>
-              <a href="./web-refund&exchange.html"><li>Exchange & Return</li></a>
-              <a href="./web-refund-policy.html"><li>Refund Policy</li></a>
-              <a href="./web-shipment-policy.html"><li>Shipment Policy</li></a>
-          </ul>
-      </div>
-      <div class="social-desc">
-          <div class="social-media">
-              <h6 class="text-c-white fw-800">FOLLOW Us On</h6>
-              <ul class="d-flex">
-                  <li><a href=""><i class='bx bxl-facebook'></i></a></li>
-                  <li><a href=""><i class='bx bxl-instagram'></i></a></li>
-                  <li><a href=""><i class='bx bxl-youtube'></i></a></li>
-                  <li><a href=""><i class='bx bxl-twitter' ></i></a></li>
-                  <li><a href=""><i class='bx bxl-pinterest-alt'></i></a></li>
-              </ul>
-          </div>
-          <div class="payment-methods">
-              <h6 class="text-c-white fw-800">Payment Methods</h6>
-              <img class="payment-method-img" src="./web-assets/assets/images/payment-methods.png" alt="">
-              <img src="./web-assets/assets/images/payment-method-2.png" alt="" width="60px" height="30px" style="margin-left: 3px;">
-          </div>
-      </div>
-  </div>
-  <hr>
-  <div class="terms-section">
-  <p>&copy; 2006 Company Name All Rights Reserved</p>
-</div>
-</footer>
+<div id="footer"></div>
 <!-- /footer -->
 
 <!-- THIRD PARTY JS -->
@@ -453,164 +397,25 @@
 <script src="./web-assets/assets/js/script.js"></script>
 
 <!-- scripts -->
- <script>
-    const locales = ["en-GB","ar-SA","zh-CN","de-DE","es-ES","fr-FR","hi-IN","it-IT","in-ID","ja-JP","ko-KR","nl-NL","no-NO","pl-PL","pt-BR","sv-SE","fi-FI","th-TH","tr-TR","uk-UA","vi-VN","ru-RU","he-IL"];
-
-function getFlagSrc(countryCode) {
-  return /^[A-Z]{2}$/.test(countryCode)
-       ? `https://flagsapi.com/${countryCode.toUpperCase()}/shiny/64.png`
-    : "";
-}
-
-const dropdownBtn = document.getElementById("dropdown-btn");
-const dropdownContent = document.getElementById("dropdown-content");
-
-function setSelectedLocale(locale) {
-  const intlLocale = new Intl.Locale(locale);
-  const langName = new Intl.DisplayNames([locale], {
-    type: "language",
-  }).of(intlLocale.language);
-
-  dropdownContent.innerHTML = "";
-
-  const otherLocales = locales.filter((loc) => loc !== locale);
-  otherLocales.forEach((otherLocale) => {
-    const otherIntlLocale = new Intl.Locale(otherLocale);
-    const otherLangName = new Intl.DisplayNames([otherLocale], {
-      type: "language",
-    }).of(otherIntlLocale.language);
-
-    const listEl = document.createElement("li");
-    listEl.innerHTML = `${otherLangName}<img src="${getFlagSrc(
-      otherIntlLocale.region
-    )}" />`;
-    listEl.value = otherLocale;
-    listEl.addEventListener("mousedown", function () {
-      setSelectedLocale(otherLocale);
-    });
-    dropdownContent.appendChild(listEl);
+<script>
+  // Load the header dynamically
+   document.getElementById("header").innerHTML = fetch('./web-header.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("header").innerHTML = data;
   });
 
-  dropdownBtn.innerHTML = `<img src="${getFlagSrc(
-    intlLocale.region
-  )}" />${langName}<span class="arrow-down"></span>`;
-}
 
-setSelectedLocale(locales[0]);
-const browserLang = new Intl.Locale(navigator.language).language;
-for (const locale of locales) {
-  const localeLang = new Intl.Locale(locale).language;
-  if (localeLang === browserLang) {
-    setSelectedLocale(locale);
-  }
-}
- </script>
- <script>
-     // Initialize Swiper
-     var swiper = new Swiper('.banner-vertical-slider', {
-         direction: 'vertical', // Set the direction to vertical
-         loop: true, // Enable loop mode
-         navigation: {
-             nextEl: '.swiper-button-next',
-             prevEl: '.swiper-button-prev',
-         },
-         pagination: {
-             el: '.swiper-pagination',
-             clickable: true, // Make pagination bullets clickable
-         },
-         autoplay: {
-             delay: 3000, // Delay between slides in ms
-             disableOnInteraction: false,
-         },
-     });
- </script>
- <script>
-    var swiper = new Swiper(".sale-slider", {
-        slidesPerView: 4,          // Show 4 slides at a time
-        spaceBetween: 10,          // Space between slides
-        loop: true,                // Enable loop for infinite sliding
-        autoplay: {
-            delay: 2500,           // Auto slide after 2.5 seconds
-            disableOnInteraction: false, // Continue autoplay after manual interaction
-        },
-        navigation: {
-            nextEl: ".swiper-button-next",
-            prevEl: ".swiper-button-prev",
-        },
-    });
-</script>
-<!-- lode More -->
-<script>
-  const productCards = document.querySelectorAll('.Product-card');
-  const loadMoreBtn = document.getElementById('loadMoreBtn');
-  const loader = document.querySelector('.loader');
-  let visibleCards = 25; // Initially visible cards
-
-  // Function to show the next set of cards
-  function loadMoreCards() {
-      loader.style.display = 'block'; // Show loader
-      setTimeout(() => {
-          loader.style.display = 'none'; // Hide loader after 2 seconds
-          for (let i = visibleCards; i < visibleCards + 25 && i < productCards.length; i++) {
-              productCards[i].style.display = 'inline-block'; // Show next 25 cards
-          }
-          visibleCards += 25; // Increase the count of visible cards
-          // Hide the button if all cards are displayed
-          if (visibleCards >= productCards.length) {
-              loadMoreBtn.style.display = 'none';
-          }
-      }, 2000); // Simulate loading time
-  }
-
-  // Show the initial 25 cards
-  for (let i = 0; i < visibleCards; i++) {
-      productCards[i].style.display = 'inline-block';
-  }
-
-  // Event listener for Load More button
-  loadMoreBtn.addEventListener('click', loadMoreCards);
-</script>
-  <!-- nitofication dropdown -->
-  <script>
-    function toggleDropdownnoti() {
-      const dropdownMenu = document.getElementById("dropdownMenu");
-      if (dropdownMenu.style.display === "block") {
-        dropdownMenu.style.display = "none";
-      } else {
-        dropdownMenu.style.display = "block";
-      }
-    }
-
-    function openTabnoti(evt, tabName) {
-      // Hide all tab contents
-      var tabContent = document.getElementsByClassName("tab-content-noti");
-      for (var i = 0; i < tabContent.length; i++) {
-        tabContent[i].style.display = "none";
-      }
-
-      // Remove active state from all tab links
-      var tabLinks = document.getElementsByClassName("tab-link-noti");
-      for (var i = 0; i < tabLinks.length; i++) {
-        tabLinks[i].classList.remove("active");
-      }
-
-      // Show the clicked tab's content and set the clicked tab link as active
-      document.getElementById(tabName).style.display = "block";
-      evt.currentTarget.classList.add("active");
-    }
-
-    // Set "New" tab content visible on page load
-    document.getElementById("new").style.display = "block";
-  </script>
-
-
-
-<script>
-  document.getElementById("header").innerHTML = fetch('./web-index.html')
-      .then(response => response.text())
-      .then(data => {
-          document.getElementById("header").innerHTML = data;
-      });
+  document.getElementById("footer").innerHTML = fetch('./web-footer.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("footer").innerHTML = data;
+  });
+  document.getElementById("preloader").innerHTML = fetch('./web-preloader.html')
+  .then(response => response.text())
+  .then(data => {
+      document.getElementById("preloader").innerHTML = data;
+  });
 </script>
 </body>
 </html>
