--- a/seller-panel and website/web-Product-details.html
+++ b/seller-panel and website/web-Product-details.html
@@ -227,7 +227,7 @@
             <li class="breadcrumb-item"><a href="" class="breadcrumb-link">Home</a></li>
             <li class="breadcrumb-item"><a href="" class="breadcrumb-link">Products</a></li>
             <li class="breadcrumb-item"><a href="" class="breadcrumb-link">Product-details</a></li>
-            <li class="breadcrumb-item active">T-shirts akjshajschashcuai suidh uui dhasiudh  h dish   </li>
+            <li class="breadcrumb-item active">T-shirts</li>
           </ol>
     </div>
    
