--- a/seller-panel and website/web-header.html
+++ b/seller-panel and website/web-header.html
@@ -19,7 +19,7 @@
                 </a>
               </div>
               <div class="links">
-                  <ul class="d-flex">
+                  <ul class="d-flex first-ul">
                     <li class="dropdown">
                       <a href="#">Categories <i class='bx bx-chevron-down'></i></a>
                       <ul class="dropdown-menu">
@@ -47,9 +47,8 @@
                         <a href="#">Category 1</a>
                     </li>
                       </ul>
-                  </li>
-                      <li><a href="./auth-register.html">Become a Seller</a></li>
-                      <li><a href="">Help & Support</a></li>
+                    </li>
+                    <li><a href="./auth-login.html">Become a Seller</a></li>
                   </ul>
               </div>
           </div>
@@ -63,6 +62,7 @@
                           </button>
                       </div>
                   </li>
+                  <li><a href=""></a><img src="./web-assets/assets/images/help-center.png" width="40px" height="40px" alt=""></li>
                   <li><a href="./web-cart.html"><i class="bx bx-cart fs-4"></i></a></li>                
                   <li>
                     <div class="dropdown-noti">
@@ -153,9 +153,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-                
-                
+                  </div>              
                   <li>
                     <div class="drop-profile">
                       <img src="./web-assets/assets/images/avatar-web.jpeg" alt="Avatar" width="50px" height="50px" style="border-radius: 50%;" onclick="toggleDropdown()">
